[package]
name = "ps-datalake"
version = "0.1.0-15"
edition = "2021"
description = "Encrypted flat storage"
license = "GPL-3.0-or-later"

[dependencies]
ps-datachunk = "0.1.0-36"
ps-hash = "0.1.0-24"
ps-hkey = "0.1.0-34"
ps-mbuf = "0.1.0-8"
ps-mmap = "0.1.0-15"
ps-str = "0.1.0-3"
ps-util = "0.1.0-6"
serde = { version = "1.0.228", features = ["serde_derive"] }
thiserror = "2.0.18"
toml = "1.0.3"

[lints.clippy]
expect_used = "warn"
nursery = { level = "warn", priority = -1 }
panic = "forbid"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "forbid"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
